tests/bad/logical_ops_not_bool.ae
/// fail: Operands must be boolean

def main() {
    let x = true or 5
}